...
                                <rect key="frame" x="20" y="84" width="374" height="107"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HNh-0l-xwO">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="37"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="31"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                                        <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="txtFld_Email"/>
                                        <constraints>
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="7Kk-St-qSP"/>
...
                                        <rect key="frame" x="0.0" y="70" width="374" height="50"/>
                                        <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="txtFld_Password"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BZ8-i8-Bd5" customClass="MyButton" customModule="A2D2_iOS" customModuleProvider="target">
                                <rect key="frame" x="20" y="772" width="374" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="btn_Login"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="ehn-Mi-Cai"/>
...
                            </visualEffectView>
                        </subviews>
                        <accessibility key="accessibilityConfiguration" identifier="vw_DriverLogin"/>
                        <gestureRecognizers/>
                        <constraints>
...
                                                        <rect key="frame" x="0.0" y="142" width="394" height="41"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gender:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ca-4G-GX8">
                                                                <rect key="frame" x="0.0" y="0.0" width="394" height="20.5"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="lbl_Name"/>
...
                                </tableViewCellContentView>
                                <color key="tintColor" red="0.086274509799999996" green="0.35686274509999999" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="cell_RequestStatus"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="color" keyPath="takenRequestColor">
...
