...
    
    
    func proceedToRequest() {
        if(isWithinRange()){
            performSegue(withIdentifier: "seque_Request_Ride_Page", sender: self)
        } else {
            let alert = UIAlertController(title: "Location out of range!", message: "You are outside of the 25 mile range defined by the A2D2 program rules. If you still require a ride, please call A2D2 Dispatch at 334-953-3913", preferredStyle: .alert)
            alert.addAction(UIAlertAction(title: "Okay", style: .default, handler: nil))
            alert.addAction(UIAlertAction(title: "Call", style: .default, handler:{ action in
                self.callA2D2()
                }))
            self.present(alert, animated: true)
        }
...
